--- a/sub3suite/res/themes/light.css
+++ b/sub3suite/res/themes/light.css
@@ -17,7 +17,7 @@ QComboBox {
 
 QComboBox QWidget {
     color: rgb(250,250,250);
-    background-color: rgb(52,52,52);
+    background-color: #1f2022;
     selection-background-color: rgba(0,0,0, 50);
     selection-color: rgb(250,250,250);
 }
@@ -47,7 +47,13 @@ QScrollArea[without_border="true"] {
 }
 
 QScrollArea QWidget {
-    background-color: rgb(40,40,40);
+    background-color: #1f2022;
+}
+
+QWidget[s3s_light="true"],
+QScrollArea QWidget[s3s_light="true"],
+QScrollArea[s3s_light="true"] QWidget {
+    background-color: #1f2022;
 }
 
 QAbstractScrollArea {
@@ -59,7 +65,7 @@ QToolBox QScrollArea {
 }
 
 QToolBox QWidget {
-    background-color:rgb(40,40,40);
+    background-color: #1f2022;
 }
 
 QToolBox::tab {
@@ -261,7 +267,7 @@ QFrame[frameShape="4"] {
     min-height: 1px;
     max-height: 1px;
     border: none;
-    background: rgb(20,20,20);
+    background: rgb(30,30,30);
 }
 
 QFrame[default_frame="true"] {
@@ -288,11 +294,11 @@ QLabel:disabled {
 }
 
 QMainWindow {
-    background-color:rgb(45,45,45);
+    background-color: #1f2022;
 }
 
 QDialog {
-    background-color:rgb(45,45,45);
+    background-color: #1f2022;
 }
 
 QSplitter::handle:horizontal {
@@ -307,13 +313,13 @@ QSplitter::handle:vertical{
 QSplitterHandle:hover {}
 
 QSplitter::handle:horizontal:hover{
-    background-color:rgb(25,25,25);
+    background-color:rgb(30,30,30);
     margin-left: 3px;
     margin-right: 3px;
 }
 
 QSplitter::handle:vertical:hover {
-    background-color:rgb(25,25,25);
+    background-color:rgb(30,30,30);
     margin-top: 3px;
     margin-bottom: 3px;
 }
@@ -382,11 +388,12 @@ QPushButton:!pressed{
     padding-left: 1px;
     padding-right: 1px;
     border-style: outset;
-    border-color: rgb(15,15,15);
+    /*border-color: rgb(15,15,15);*/
+    border-color: rgb(100,100,100);
     border-width: 1px;
     border-style: solid;
     color: rgb(180, 180, 140);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(50, 50, 50, 255),stop: 0.4 rgba(25,25,25,255), stop: 0.5 rgba(25,25,25,255) stop:1 rgba(50, 50, 50, 255));
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(50, 50, 50, 255),stop: 0.4 rgba(30, 30, 30, 255), stop: 0.5 rgba(30, 30, 30, 255) stop:1 rgba(50, 50, 50, 255));
 }
 
 QPushButton:hover {
@@ -442,7 +449,7 @@ QProgressBar {
     border-width: 1px;
     border-color: rgb(20,20,20);
     border-style: inset;
-    background-color: rgb(40,40,40);
+    background-color: #1f2022;
     height: 22px;
     max-width: 200px;
     min-width: 200px;
@@ -454,15 +461,15 @@ QProgressBar::chunk {
 
 QMenuBar {
     margin-top: 1px;
-    background: rgb(45,45,45);
+    background-color: #1f2022;
 }
 
 QMenu {
     min-width: 100px;
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(25,25,25);
-    background-color: rgb(37,37,37);
+    border-color: rgb(30,30,30);
+    background-color: #1f2022;
 }
 
 QMenuBar::item {
@@ -507,7 +514,8 @@ QTabWidget::tab-bar {
 }
 
 QTabWidget::pane {
-    border-color: rgb(25,25,25);
+    /*border-color: rgb(30,30,30);*/
+    border-color: rgb(100,100,100);
     background-color:transparent;
     border-style: solid;
     border-top-width: 1px;
@@ -530,7 +538,8 @@ QTabBar::tab {
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(35, 35, 35, 255), stop:1 rgba(50, 50, 50, 255));
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(25,25,25);
+    /*border-color: rgb(30,30,30);*/
+    border-color: rgb(100,100,100);
     border-bottom-width: 0px;
     margin-left: 2px;
     margin-right: 1px;
@@ -620,8 +629,4 @@ QRadioButton:hover {
 QListView:disabled,
 QTreeView:disabled {
     color: grey;
-}
-
-QWidget[lighter="true"]{
-    background-color: rgb(45,45,45);
 }
