--- a/sub3suite/src/MainWindow.ui
+++ b/sub3suite/src/MainWindow.ui
@@ -72,12 +72,6 @@ QScrollArea QWidget {
     background-color: rgb(40,40,40);
 }
 
-QWidget[s3s_light=&quot;true&quot;],
-QScrollArea QWidget[s3s_light=&quot;true&quot;],
-QScrollArea[s3s_light=&quot;true&quot;] QWidget {
-    background-color: rgb(45,45,45);
-}
-
 QAbstractScrollArea {
     background-color: transparent;
 }
@@ -87,7 +81,7 @@ QToolBox QScrollArea {
 }
 
 QToolBox QWidget {
-    background-color:rgb(45,45,45);
+    background-color:rgb(40,40,40);
 }
 
 QToolBox::tab {
@@ -289,7 +283,7 @@ QFrame[frameShape=&quot;4&quot;] {
     min-height: 1px;
     max-height: 1px;
     border: none;
-    background: rgb(30,30,30);
+    background: rgb(20,20,20);
 }
 
 QFrame[default_frame=&quot;true&quot;] {
@@ -335,13 +329,13 @@ QSplitter::handle:vertical{
 QSplitterHandle:hover {}
 
 QSplitter::handle:horizontal:hover{
-    background-color:rgb(30,30,30);
+    background-color:rgb(25,25,25);
     margin-left: 3px;
     margin-right: 3px;
 }
 
 QSplitter::handle:vertical:hover {
-    background-color:rgb(30,30,30);
+    background-color:rgb(25,25,25);
     margin-top: 3px;
     margin-bottom: 3px;
 }
@@ -414,7 +408,7 @@ QPushButton:!pressed{
     border-width: 1px;
     border-style: solid;
     color: rgb(180, 180, 140);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(50, 50, 50, 255),stop: 0.4 rgba(30, 30, 30, 255), stop: 0.5 rgba(30, 30, 30, 255) stop:1 rgba(50, 50, 50, 255));
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(50, 50, 50, 255),stop: 0.4 rgba(25,25,25,255), stop: 0.5 rgba(25,25,25,255) stop:1 rgba(50, 50, 50, 255));
 }
 
 QPushButton:hover {
@@ -489,7 +483,7 @@ QMenu {
     min-width: 100px;
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(30,30,30);
+    border-color: rgb(25,25,25);
     background-color: rgb(37,37,37);
 }
 
@@ -535,7 +529,7 @@ QTabWidget::tab-bar {
 }
 
 QTabWidget::pane {
-    border-color: rgb(30,30,30);
+    border-color: rgb(25,25,25);
     background-color:transparent;
     border-style: solid;
     border-top-width: 1px;
@@ -558,7 +552,7 @@ QTabBar::tab {
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(35, 35, 35, 255), stop:1 rgba(50, 50, 50, 255));
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(30,30,30);
+    border-color: rgb(25,25,25);
     border-bottom-width: 0px;
     margin-left: 2px;
     margin-right: 1px;
@@ -648,6 +642,10 @@ QRadioButton:hover {
 QListView:disabled,
 QTreeView:disabled {
     color: grey;
+}
+
+QWidget[lighter=&quot;true&quot;]{
+    background-color: rgb(45,45,45);
 }
 </string>
   </property>
