--- a/sub3suite/src/Dialogs/DocumentationDialog.ui
+++ b/sub3suite/src/Dialogs/DocumentationDialog.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme=":/img/res/icons/doc.png"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="leftMargin">
     <number>6</number>
