--- a/sub3suite/src/Dialogs/EnumConfigDialog.ui
+++ b/sub3suite/src/Dialogs/EnumConfigDialog.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Scan Configuration</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme=":/img/res/icons/gear.png"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="groupBoxResults">
