--- a/sub3suite/src/Dialogs/PassiveConfigDialog.ui
+++ b/sub3suite/src/Dialogs/PassiveConfigDialog.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string>Scan Configuration</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme=":/img/res/icons/gear.png"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
     <widget class="QGroupBox" name="groupBoxScan">
