--- a/sub3suite/src/Dialogs/PreferenceDialog.ui
+++ b/sub3suite/src/Dialogs/PreferenceDialog.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Preferences</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme=":/img/res/icons/preferences.png"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTabWidget" name="tabWidget">
