--- a/sub3suite/src/Dialogs/ProjectConfigDialog.ui
+++ b/sub3suite/src/Dialogs/ProjectConfigDialog.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Project Config</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme=":/img/res/icons/preferences.png"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
