--- a/sub3suite/src/Dialogs/WordlistDialog.ui
+++ b/sub3suite/src/Dialogs/WordlistDialog.ui
@@ -31,6 +31,9 @@
   <property name="windowTitle">
    <string>Bruteforce Wordlist</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme=":/img/res/icons/list.png"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
     <widget class="QTabWidget" name="tabWidget">
