added modules and their links

--- a/sub3suite/src/Dialogs/ActiveConfigDialog.ui
+++ b/sub3suite/src/Dialogs/ActiveConfigDialog.ui
@@ -26,7 +26,8 @@
    <string>Scan Configuration</string>
   </property>
   <property name="windowIcon">
-   <iconset theme=":/img/res/icons/gear.png"/>
+   <iconset>
+    <normaloff>.</normaloff>.</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_6">
    <item>
