--- a/sub3suite/src/Dialogs/DocumentationDialog.ui
+++ b/sub3suite/src/Dialogs/DocumentationDialog.ui
@@ -14,7 +14,8 @@
    <string>Dialog</string>
   </property>
   <property name="windowIcon">
-   <iconset theme=":/img/res/icons/doc.png"/>
+   <iconset>
+    <normaloff>.</normaloff>.</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="leftMargin">
