--- a/sub3suite/src/Dialogs/EnumConfigDialog.ui
+++ b/sub3suite/src/Dialogs/EnumConfigDialog.ui
@@ -14,7 +14,8 @@
    <string>Scan Configuration</string>
   </property>
   <property name="windowIcon">
-   <iconset theme=":/img/res/icons/gear.png"/>
+   <iconset>
+    <normaloff>.</normaloff>.</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
