--- a/sub3suite/src/Dialogs/PassiveConfigDialog.ui
+++ b/sub3suite/src/Dialogs/PassiveConfigDialog.ui
@@ -20,7 +20,8 @@
    <string>Scan Configuration</string>
   </property>
   <property name="windowIcon">
-   <iconset theme=":/img/res/icons/gear.png"/>
+   <iconset>
+    <normaloff>.</normaloff>.</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
