added save a project copy functionality

--- a/sub3suite/src/Dialogs/FailedScansDialog.ui
+++ b/sub3suite/src/Dialogs/FailedScansDialog.ui
@@ -29,6 +29,9 @@
      <property name="editTriggers">
       <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
      </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
