--- a/sub3suite/src/Dialogs/AboutDialog.ui
+++ b/sub3suite/src/Dialogs/AboutDialog.ui
@@ -145,6 +145,13 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayoutGithub">
          <item>
+          <widget class="QPushButton" name="buttonCopy">
+           <property name="text">
+            <string>Copy</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="horizontalSpacerGithub">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
