--- a/sub3suite/src/Dialogs/StartupDialog.ui
+++ b/sub3suite/src/Dialogs/StartupDialog.ui
@@ -19,6 +19,8 @@
 }
 
 QComboBox {
+    min-height: 19px;
+    max-height: 19px;
     border-style: outset;
     border-style: solid;
     border-color: rgb(25,25,25);
@@ -53,6 +55,11 @@ QScrollArea {
     border-style: solid;
     border-width: 1px;
     border-color: rgb(25,25,25);
+}
+
+QScrollArea[without_border=&quot;true&quot;] {
+    border-style: solid;
+    border-width: 0px;
 }
 
 QScrollArea QWidget {
@@ -267,13 +274,10 @@ QToolButton:pressed {
 }
 
 QFrame[frameShape=&quot;4&quot;] {
+    min-height: 1px;
+    max-height: 1px;
     border: none;
-    background: rgb(30,30,30);
-}
-
-QFrame[frameShape=&quot;5&quot;] {
-    border: none;
-    background: transparent;
+    background: rgb(20,20,20);
 }
 
 QFrame[default_frame=&quot;true&quot;] {
@@ -319,13 +323,13 @@ QSplitter::handle:vertical{
 QSplitterHandle:hover {}
 
 QSplitter::handle:horizontal:hover{
-    background-color:rgb(30,30,30);
+    background-color:rgb(25,25,25);
     margin-left: 3px;
     margin-right: 3px;
 }
 
 QSplitter::handle:vertical:hover {
-    background-color:rgb(30,30,30);
+    background-color:rgb(25,25,25);
     margin-top: 3px;
     margin-bottom: 3px;
 }
@@ -348,8 +352,11 @@ QPlainTextEdit {
 
 QTreeView::item{
     border-style: solid;
-    border-color: rgb(27, 27, 27);
-    border-width: 1px;
+    border-color: rgb(15,15,15);
+    border-top-width: 0px;
+    border-right-width: 1px;
+    border-left-width: 0px;
+    border-bottom-width: 1px;
 }
 
 QListWidget::item:selected,
@@ -377,8 +384,11 @@ QHeaderView::section {
     height: 20px;
     background-color: rgba(80,80,80,90);
     border-style: solid;
-    border-width: 1px;
-    border-color: rgb(25,25,25);
+    border-color: rgb(15,15,15);
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
 }
 
 QPushButton,
@@ -392,7 +402,7 @@ QPushButton:!pressed{
     border-width: 1px;
     border-style: solid;
     color: rgb(180, 180, 140);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(50, 50, 50, 255),stop: 0.4 rgba(30, 30, 30, 255), stop: 0.5 rgba(30, 30, 30, 255) stop:1 rgba(50, 50, 50, 255));
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(50, 50, 50, 255),stop: 0.4 rgba(25,25,25,255), stop: 0.5 rgba(25,25,25,255) stop:1 rgba(50, 50, 50, 255));
 }
 
 QPushButton:hover {
@@ -467,16 +477,15 @@ QMenu {
     min-width: 100px;
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(30,30,30);
+    border-color: rgb(25,25,25);
     background-color: rgb(37,37,37);
 }
 
 QMenuBar::item {
     margin-top: 1px;
     color: rgb(250,250,250);
-    spacing: 15px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-top: 1px;
     padding-bottom: 1px;
     background: transparent;
@@ -502,7 +511,8 @@ QMenu::​separator {
 QMenu::item {
     color: rgb(250,250,250);
     background-color: transparent;
-    padding-left: 20px;
+    margin-left: 5px;
+    padding-left: 22px;
     padding-top: 4px;
     padding-bottom: 4px;
     padding-right: 20px;
@@ -513,13 +523,18 @@ QTabWidget::tab-bar {
 }
 
 QTabWidget::pane {
-    border-color: rgb(30,30,30);
+    border-color: rgb(25,25,25);
     background-color:transparent;
     border-style: solid;
     border-top-width: 1px;
     border-right-width: 0px;
     border-left-width: 0px;
     border-bottom-width: 0px;
+}
+
+QTabWidget::pane[upside=&quot;true&quot;] {
+    border-width: 0px;
+    background-color:transparent;
 }
 
 QTabBar::tab {
@@ -531,7 +546,7 @@ QTabBar::tab {
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(35, 35, 35, 255), stop:1 rgba(50, 50, 50, 255));
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(30,30,30);
+    border-color: rgb(25,25,25);
     border-bottom-width: 0px;
     margin-left: 2px;
     margin-right: 1px;
@@ -610,7 +625,7 @@ QRadioButton:hover {
     border-color: rgb(50,50,50);
 }
 
-*[default_color=&quot;true&quot;] {
+*[s3s_color=&quot;true&quot;] {
     color: rgb(185, 185, 145);
 }
 
@@ -621,6 +636,10 @@ QRadioButton:hover {
 QListView:disabled,
 QTreeView:disabled {
     color: grey;
+}
+
+QWidget[lighter=&quot;true&quot;]{
+    background-color: rgb(45,45,45);
 }
 </string>
   </property>
@@ -654,7 +673,13 @@ QTreeView:disabled {
        <property name="minimumSize">
         <size>
          <width>200</width>
-         <height>50</height>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>40</height>
         </size>
        </property>
        <property name="text">
@@ -888,7 +913,7 @@ QTreeView:disabled {
           <enum>QAbstractItemView::SelectRows</enum>
          </property>
          <property name="showGrid">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <attribute name="horizontalHeaderMinimumSectionSize">
           <number>100</number>
