refactoring SSL Engine

--- a/sub3suite/src/engines/active/Active.ui
+++ b/sub3suite/src/engines/active/Active.ui
@@ -421,12 +421,22 @@
             </property>
             <item>
              <property name="text">
-              <string>Subdomains</string>
+              <string>Hostname</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Ip</string>
+              <string>IPv4</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>IPv6</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Port</string>
              </property>
             </item>
            </widget>
